# Deducto

./: README.md  pyproject.toml  test-recon.py  test_brave.py
deductoscope/: __init__.py  banner.py  cli.py  resources.py
deductoscope/banners/: DeductoScope.txt
deductoscope/core/: IP_DNS.py  __init__.py  config.py  dedupe.py  engine.py  identity.py  limiter.py  scoring.py  search.py  time_out.py  utils.py
